--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ attrs==24.2.0
 blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 distro==1.9.0
@@ -29,6 +30,7 @@ pandas==2.2.3
 pillow==10.4.0
 protobuf==5.28.2
 pyarrow==17.0.0
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.9.1
@@ -42,6 +44,7 @@ rpds-py==0.20.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+srt==3.5.3
 streamlit==1.39.0
 tenacity==9.0.0
 toml==0.10.2
@@ -50,5 +53,6 @@ tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+vosk==0.3.45
 watchdog==5.0.3
-python-dotenv
+websockets==13.1
